tests/Checker/everything/errors/10c.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *10: incompatible type for this unary operator
Compilation was unsuccessful.
